# django-project

./: requirements.txt
prod/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
prod/mysite/database/: db.sqlite3
prod/mysite/mysite/: settings.py
