[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["lerafro <egornikitin2119@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.15.2"
django-filter = "^24.2"
django-debug-toolbar = "^4.4.5"
pillow = "^10.4.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
